# agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  cli.py  main.py  package.json  pyproject.toml  requirements.txt  self_update.py
actions/: __init__.py  add.py  explain.py  projects.py  remove.py  settings.py  tldr.py
agent/: __init__.py  analyst.py  collector.py  config.py  events.py  prompts.py  sink.py  stage.py  stages.py  synthesizer.py
application/: rooms.py
components/: __init__.py  spec.json
core/: __init__.py  action.py  action_registry.py  ask_context.py  discovery.py  guard.py  module.py  registry.py  room_context.py  settings.py  style.py  text.py  ui_context.py
desktop/: README.md  index.html  main.js  markdown.js  markdown.test.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
docs/: HOOKS.md  MODULES.md  PROTOCOL.md  README.md  SESSIONS.md
domain/: __init__.py  analyst.py  config.py  context.py  events.py  prompts.py  sink.py  stage.py  stages.py  synthesizer.py
extra/: __init__.py  _example_hook.py  _example_logging_hook.py
helpers/: __init__.py  callbacks.py  console.py  llm.py
hooks/: __init__.py  dispatch.py  loader.py  registry.py
llm/: __init__.py  callbacks.py  client.py  providers_cli.py
models/: __init__.py  context.py  file_metadata.py  project_index.py  project_synthesis.py  session_manifest.py  turn.py  ui.py
modules/: __init__.py  ask.py  edit.py  metadata.py  write.py
pipeline/: __init__.py  analyst.py  config.py  context.py  events.py  prompts.py
server/: discovery.py  errors.py  events.py  lifecycle.py  protocol.py  rooms.py  routes.py  transport.py
service/: room_repository.py  rooms.py  ui_builder.py
tests/: stubs.py  test_action.py  test_app.py  test_cat.py  test_core_room_context.py  test_core_settings.py  test_discovery.py  test_events.py  test_execute.py  test_file_tools_multi_project.py  test_guard.py  test_hooks.py  test_lifecycle.py  test_llm_client.py  test_providers_cli.py  test_registry.py  test_rooms_cache.py  test_rooms_projects.py  test_rooms_ui_logging.py  test_self_update.py  test_server.py  test_settings_routes.py  test_stage.py  test_tool_describe.py  test_tool_notion.py  test_transport.py  test_ui_builder.py  test_ui_events.py  test_workspace_ignore.py  test_workspace_indexer.py  test_workspace_manager.py  test_workspace_serialize.py  test_workspace_signatures.py  test_workspace_synthesis_repository.py  test_workspace_watcher.py  ui.html
tool/: __init__.py  ask.py  cat.py  create_directory.py  delete.py  describe.py  edit.py  execute.py  ls.py  notion.py  registry.py  tree.py  ui.py  write.py
tools/: __init__.py  ask.py  cat.py  create_directory.py  delete.py  edit.py  execute.py  guard.py  ls.py  metadata.py  tree.py  write.py
ui/: __init__.py  answer.py  app.py  engine.py  error.py  prompts.py  state.py  style.py  trace.py
wire/: __init__.py  __main__.py  app.py  discovery.py  events.py  lifecycle.py  protocol.py  routes.py
workspace/: __init__.py  cli.py  config.py  ignore.py  index_repository.py  indexer.py  manager.py  (+5 more)
(+28 files in other folders)
