[project]
name = "agent"
version = "0.1.0"
description = "An interactive CLI agent that reads a codebase and answers questions about it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-openai",
    "python-dotenv",
    "rich",
    "textual",
    "websockets",
]

[project.scripts]
agent = "cli:main"
agent-server = "interfaces.ws.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "main"]

[tool.setuptools.packages.find]
include = [
    "core*",
    "modules*",
    "domain*",
    "application*",
    "infrastructure*",
    "interfaces*",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]
