[project]
name = "agent"
version = "0.1.0"
description = "An interactive CLI agent that reads a codebase and answers questions about it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "langchain",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-openai",
    "pathspec",
    "python-dotenv",
    "rich",
    "textual",
    "watchdog",
    "websockets",
]

[project.scripts]
agent = "cli:main"
agent-server = "wire.__main__:main"
agent-session = "workspace.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "main", "self_update"]

[tool.setuptools.packages.find]
include = [
    "core*",
    "llm*",
    "tool*",
    "agent*",
    "models*",
    "wire*",
    "service*",
    "ui*",
    "hooks*",
    "extra*",
    "workspace*",
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]
